posts mat-toolbar fix on mobile

--- a/src/app/pages/posts/posts.component.scss
+++ b/src/app/pages/posts/posts.component.scss
@@ -2,6 +2,7 @@
   display: grid;
   gap: 15px;
   padding: 20px;
+  justify-items: center;
 }
 
 @media (min-width: 600px) {
